<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_owner_name">APADEA</string>
    <string name="app_name">TEAyudo</string>

    <string name="fantasy_name">GUIONES SOCIALES</string>
    <string name="action_settings">Settings</string>
    <string name="title_sample_cache">Sample Cache</string>
    <string name="title_settings">Settings Screen</string>
    <string name="environment">Environment</string>
    <string name="debug">Debug</string>
    <string name="target_env">Target Environment</string>
    <string name="console_log_level">Console Logging Level</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>

    <string name="select_script">Seleccione un Script</string>

    <string name="default_script_name">Nuevo Script</string>
    <string name="edit_text_name_hint">Nombre</string>

    <string name="next_action_text">SIGUIENTE</string>
    <string name="what_is_guion_name_text">¿CUÁL ES EL NOMBRE DEL GUIÓN?</string>
    <string name="save_action_text">Guardar</string>
    <string name="what_is_person_name">¿CÓMO SE LLAMA LA PERSONA?</string>
    <string name="whose_is_guion_text">¿ESTE GUIÓN ES PARA?</string>
    <string name="default_script_example">GUIONES SOCIALES DE EJEMPLO</string>

    <string name="list_patient_create">CREAR UNA NUEVA PERSONA</string>

    <!-- Error stuff -->
    <string name="error_image">La imagen es demasiado grande, intente con una de menor tamaño.</string>
    <string name="error_empty_image">Intente seleccionar una imagen y/o ingresar un texto.</string>

    <string name="title_back">SALIR</string>

    <string name="use_guide_title">Bienvenido a TEAyudo!</string>
    <string name="use_guide_leyenda">Vamos a aprender a usar ésta aplicación</string>
    <string name="use_guide_siguente">Siguente</string>

    <string name="use_guide_scripts_prueba">Tenemos scripts de prueba para que puedas probar</string>

    <string name="use_guide_crear_scripts">Si te interesa, podés crear tus propios Scripts aquí</string>

    <string name="use_guide_btn_entendido">Ok, entendido</string>

    <string name="scriptlist_new_script">NUEVO GUIÓN</string>
    <string name="scriptlist_edit">Editar</string>
    <string name="scriptlist_save">GUARDAR</string>
    <string name="cover_picture_title">ELEGÍ UNA FOTO DE PORTADA PARA:</string>
    <string name="you_can_change_title">(LA PODÉS CAMBIAR DESPUÉS)</string>
    <string name="back_title">ATRÁS</string>
    <string name="about_btn">ACERCA DE</string>
    <string name="about_version">Versión </string>
    <!-- About screen -->
    <string name="about_leyend_ln_1">ESTA APLICACIÓN FUE REALIZADA EN EL MARCO DEL PROYECTO DANE</string>
    <string name="about_leyend_ln_2">CON LA PARTICIPACION DE VOLUNTARIOS DE </string>
    <string name="about_leyend_ln_3">ORIGINALMENTE DESARROLADA POR GLOBANT LABS:</string>
    <string name="about_leyend_ln_4">ABIGAIL SCHEREIDER - CINTIA LENKOVICH  FEDERICO ROMANO</string>
    <string name="about_leyend_ln_5">FRANCISCO MARQUEZ - LEONEL MENDEZ - MARÍA PARIGI</string>
    <string name="about_leyend_ln_6">MARIA EUGENIA SOUZA - MARIA SARROUF - NICOLÁS QUARTIERI</string>
    <string name="about_leyend_ln_7">STELLA ROMERO - VIRGINIA GONZALEZ</string>

    <string name="gallery_title">Selecciona una fotografía</string>
    <string name="title_activity_screenplay">ScreenplayActivity</string>
    <string name="start_screenplay_edit">COMENZAR A EDITAR</string>

    <string name="script_select_edit">EDITAR</string>
    <!-- Editor text screen -->
    <string name="editor_erase_photo">QUITAR FOTO</string>
    <string name="editor_take_photo">TOMAR FOTO</string>
    <string name="editor_pick_photo">ELEGIR FOTO</string>
    <string name="editor_add_button">add_button</string>
    <string name="script_select_add">GUARDAR</string>
    <string name="script_select_remove">BORRAR</string>
    <string name="popupmenu_edit">EDITAR</string>
    <string name="popupmenu_remove">ELIMINAR</string>
    <string name="popupmenu_copy">COPIAR</string>
    <string name="hint_leyend">TEXTO</string>

    <string name="slide_vacio_one">EL GUIÓN ESTA VACÍO</string>
    <string name="slide_vacio_two">CONTINÚA EDITANDO EL GUIÓN PARA AGREGARLE CONTENIDO</string>

    <string name="default_text">text_to_display</string>
    <!-- Stuff -->
    <string name="script_from">COPIAR</string>
    <string name="script_to">A QUIEN?</string>
    <string name="name_script">NOMBRE DEL SCRIPT</string>

    <!-- Popup - Dialog -->
    <string name="remove_patient">Confirma eliminar esta persona ?</string>
    <string name="remove_script">Confirma eliminar este guión ?</string>
    <string name="remove_title">Eliminar</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
</resources>
