<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="700dp"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/status_bar_light">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/teayudo_logo_splash"
            android:layout_gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <TextView
            style="@style/Text.Body.Small.Bold"
            android:id="@+id/txt_build_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_version"
            android:layout_below="@+id/img_logo"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:background="#f4f4f4"
        android:padding="20dp">

        <TextView
            style="@style/Text.Body.Small.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_leyend_ln_1"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp" />

        <TextView
            style="@style/Text.Body.Small.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_leyend_ln_2"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/about_tag"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#f4f4f4"
        android:padding="20dp">

        <TextView
            style="@style/Text.Body.Small.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_leyend_ln_3"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp" />

        <TextView
            style="@style/Text.Body.Small.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_leyend_ln_4"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp" />

        <TextView
            style="@style/Text.Body.Small.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_leyend_ln_5"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp" />

        <TextView
            style="@style/Text.Body.Small.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_leyend_ln_6"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp" />

        <TextView
            style="@style/Text.Body.Small.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_leyend_ln_7"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp" />
    </LinearLayout>

</LinearLayout>