<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#75000000">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/use_guide_title"
        android:id="@+id/txtTitle"
        android:textColor="@color/white"
        android:layout_marginTop="83dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/use_guide_leyenda"
        android:textColor="@color/white"
        android:id="@+id/txtLeyenda"
        android:layout_below="@+id/txtTitle"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_guide_siguente"
        android:id="@+id/btnNextTitle"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/ic_launcher"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/txtLeyenda"
        android:visibility="invisible"
        android:layout_alignBottom="@+id/btnNextTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_guide_scripts_prueba"
        android:id="@+id/txtScriptsPrueba"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:layout_marginTop="50dp"
        android:visibility="invisible"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_guide_siguente"
        android:id="@+id/btnNextPrueba"
        android:visibility="invisible"
        android:layout_alignTop="@+id/btnNextTitle"
        android:layout_alignLeft="@+id/txtLeyenda"
        android:layout_alignStart="@+id/txtLeyenda" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_crear_script"
        android:visibility="invisible"
        android:src="@drawable/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_guide_crear_scripts"
        android:textColor="@color/white"
        android:id="@+id/txt_nuevo_script"
        android:visibility="invisible"
        android:layout_alignTop="@+id/imageView"
        android:layout_toLeftOf="@+id/img_crear_script"
        android:layout_toStartOf="@+id/img_crear_script" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_guide_btn_entendido"
        android:id="@+id/btn_entendido"
        android:visibility="invisible"
        android:layout_above="@+id/btnNextTitle"
        android:layout_alignRight="@+id/btnNextTitle"
        android:layout_alignEnd="@+id/btnNextTitle" />

</RelativeLayout>