<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardUseCompatPadding="true"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/panel_horizontal_padding"
        android:background="@color/white">

        <TextView
            android:id="@+id/txt_edit_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_medium"
            android:text="@string/popupmenu_edit"/>

        <TextView
            android:id="@+id/txt_remove_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_medium"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/popupmenu_remove"/>

        <TextView
            android:id="@+id/txt_copy_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_medium"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/popupmenu_copy"/>
    </LinearLayout>
</android.support.v7.widget.CardView>