<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Panel.White">

    <LinearLayout
        android:layout_width="@dimen/screenplay_container"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/lyt_container">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/what_is_person_name"
        android:id="@+id/whose_is_screenplay_text"
        android:layout_margin="@dimen/margin_medium"
        android:layout_gravity="left"
        android:textAllCaps="true"
        style="@style/Text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/screenplay_name"
        android:hint="@string/edit_text_name_hint"
        android:inputType="textCapCharacters"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:textAllCaps="true"
        android:textColorHint="@color/light_gray"
        android:textSize="@dimen/font_size_big"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_action_text"
        android:id="@+id/next_button"
        android:layout_gravity="right"
        style="@style/Button.Flat"/>

    </LinearLayout>
</RelativeLayout>