<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/whose_is_guion_text"
        android:id="@+id/whoseIsGuionText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/margin_medium"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/childrenPicture"
        android:src="@drawable/ic_launcher"
        android:layout_below="@+id/whoseIsGuionText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/margin_medium"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/childrenNameText"
        android:layout_alignTop="@+id/childrenPicture"
        android:layout_toRightOf="@+id/childrenPicture"
        android:layout_toEndOf="@+id/childrenPicture"
        android:layout_marginTop="@dimen/margin_medium"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancelGuionButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@android:drawable/ic_delete"
        android:layout_margin="@dimen/margin_medium"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/what_is_guion_name_text"
        android:id="@+id/whatIsNameText"
        android:layout_below="@+id/childrenPicture"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/margin_medium"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/guionName"
        android:layout_below="@+id/whatIsNameText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/edit_text_name_hint"
        android:layout_toLeftOf="@+id/nextButton"
        android:layout_toStartOf="@+id/nextButton"
       android:inputType="textCapCharacters"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_action_text"
        android:id="@+id/nextButton"
        android:visibility="gone"
        android:layout_below="@+id/whatIsNameText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />

</RelativeLayout>